@@ -6,7 +6,7 @@
 # Copyright (c) 2004 by Donal K. Fellows.
 # All rights reserved.
 #
-# RCS: @(#) $Id: tm.test,v 1.7 2008/07/19 22:50:39 nijtmans Exp $
+# RCS: @(#) $Id: tm.test,v 1.8 2008/09/26 19:54:59 dgp Exp $
 
 package require Tcl 8.5
 if {"::tcltest" ni [namespace children]} {
@@ -21,12 +21,12 @@ test tm-1.1 {tm: path command exists} {
 test tm-1.2 {tm: path command syntax} -returnCodes error -body {
     ::tcl::tm::path foo
 } -result {unknown or ambiguous subcommand "foo": must be add, list, or remove}
-test tm-1.3 {tm: path command syntax} -returnCodes error -body {
+test tm-1.3 {tm: path command syntax} {
     ::tcl::tm::path add
-} -result "wrong # args: should be \"::tcl::tm::path add path ?arg ...?\""
-test tm-1.4 {tm: path command syntax} -returnCodes error -body {
+} {}
+test tm-1.4 {tm: path command syntax} {
     ::tcl::tm::path remove
-} -result "wrong # args: should be \"::tcl::tm::path remove path ?arg ...?\""
+} {}
 test tm-1.5 {tm: path command syntax} -returnCodes error -body {
     ::tcl::tm::path list foobar
 } -result "wrong # args: should be \"::tcl::tm::path list\""
